--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         #img4 {
             border-radius: 210px;
             box-shadow: 3px 5px 25px rgba(0, 0, 0, 0.548);
+            transition: all .5s ease-in-out;
+        }
+        #img4:hover {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
         }
 
         .seccion5 .col-md-4 {
