--- a/index.html
+++ b/index.html
@@ -1,75 +1,126 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-    <title>TIA-2020</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Fuentes -->
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+
+    <!-- Titulo  -->
+    <title>Inicio</title>
+
+    <!-- Estilos CSS -->
+    <link rel="stylesheet" href="resources/css/styles.css" />
+
+    <style>
+        .carousel-inner img {
+            width: 100%;
+            height: ;
+        }
+
+        img {
+            -webkit-filter: grayscale(50%);
+            filter: grayscale(80%);
+        }
+    </style>
+
+
 </head>
 
-<body>
-    <!-- Navigation -->
-    <nav class="w3-bar w3-black">
-        <a href="#home" class="w3-button w3-bar-item">Home</a>
-        <a href="#band" class="w3-button w3-bar-item">Band</a>
-        <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+<body class="bg-dark">
+    <!-- Barra Navegadora -->
+    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+
+        <button class="navbar-toggler hidden-lg-up bg-light" type="button" data-toggle="collapse"
+            data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+            aria-label="Toggle navigation"></button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
+
+                <li class="nav-item p-2">
+                    <a class="nav-link" href="index1.html">Vamos al sitio web de marketing <i class="fa fa-arrow-right"
+                            aria-hidden="true"></i></a>
+                </li>
+
+            </ul>
+        </div>
     </nav>
 
-    <!-- Slide Show -->
-    <section>
-        <img class="mySlides" src="./resources/img/index/MULTIMEDIA.jpg" style="width:100%; height:500px;">
-        <img class="mySlides" src="img_ny.jpg" style="width:100%">
-        <img class="mySlides" src="img_chicago.jpg" style="width:100%">
-    </section>
 
-    <section class="w3-container w3-center" style="max-width:600px">
-        <h2 class="w3-wide">APLICACION DE HERRAMIENTAS MULTIMEDIALES EN PAGINAS WEB</h2>
-        <H3>TECNOLOGIAS INFORMATICAS AVANZADAS</H3>
-        
-        <p class="w3-opacity"><i>We love music</i></p>
-    </section>
+    <header class="cabecera">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000"
+            style="position: relative;">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./resources/img/index/virtual.jpg" class="d-block w-100" alt="..." width="100wv"
+                        height="600px">
+                </div>
+                <div class="carousel-item ">
+                    <img src="./resources/img/index/multemdia.jpg" class="d-block w-100" alt="..." width="100wv"
+                        height="600px">
+                </div>
+                <div class="carousel-item">
+                    <img src="./resources/img/index/codigo.jpg" class="d-block w-100" alt="..." width="100wv"
+                        height="600px">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 
-    <section class="w3-container w3-content w3-center" style="max-width:600px">
-        <p class="w3-justify">
-            We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </section>
+    </header>
+    <div class="seccion-media bg-dark">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-8  text-white align-self-center text-center  py-3">
+                    <h3>TALLER DE APLICACION DE HERRAMIENTAS MULTIMEDIALES EN PAGINAS WEB</h3>
+                    <h4>TECNOLOGIAS INFORMATICAS AVANZADAS</h4>
+                </div>
+            </div>
+            <div class="row justify-content-end"></div>
+            <div class="col-6 text-white">
+                <p>INTEGRANTES: PARDO, JORGE ARIEL - PONCE, LUCAS LUCIANO <br>
+                    DOCENTES: DIGION, LEDA - AVILA, CLAUDIA
+                </p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-8  text-white align-self-center text-center  py-3">
+                    <p>Trabajo final de la Asignatura Tecnologias Informaticas Avanzadas. <br>
+                        El proyecto correspponde a un sitio web para una empresa de marketing digital, que pretende
+                    presentarse y mostrar sus servicios de un modo ameno y atractivo a sus potenciales clientes.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <audio src="./resources/audio/relaxing jazz music for study.mp3" autoplay loop></audio>
+    </div>
 
-    <script>
-        // Automatic Slideshow - change image every 3 seconds
-        var myIndex = 0;
-        carousel();
 
-        function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            myIndex++;
-            if (myIndex > x.length) { myIndex = 1 }
-            x[myIndex - 1].style.display = "block";
-            setTimeout(carousel, 3000);
-        }
-    </script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+
+
+
+    <!-- Bootrtrap 4 scripts -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 </body>
-
-</html>
