--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <style>
         .carousel-inner img {
             width: 100%;
-            height: ;
+
         }
 
         img {
@@ -91,17 +91,21 @@
                     <h4>TECNOLOGIAS INFORMATICAS AVANZADAS</h4>
                 </div>
             </div>
-            <div class="row justify-content-end"></div>
-            <div class="col-6 text-white">
-                <p>INTEGRANTES: PARDO, JORGE ARIEL - PONCE, LUCAS LUCIANO <br>
-                    DOCENTES: DIGION, LEDA - AVILA, CLAUDIA
-                </p>
+
+            <div class="row justify-content-center">
+                <div class="col-8  text-white align-self-center text-center py-3">
+                    <p>INTEGRANTES: PARDO, JORGE ARIEL - PONCE, LUCAS LUCIANO <br>
+                        DOCENTES: DIGION, LEDA - AVILA, CLAUDIA
+                    </p>
+
+                </div>
             </div>
+
             <div class="row justify-content-center">
                 <div class="col-8  text-white align-self-center text-center  py-3">
                     <p>Trabajo final de la Asignatura Tecnologias Informaticas Avanzadas. <br>
                         El proyecto correspponde a un sitio web para una empresa de marketing digital, que pretende
-                    presentarse y mostrar sus servicios de un modo ameno y atractivo a sus potenciales clientes.
+                        presentarse y mostrar sus servicios de un modo ameno y atractivo a sus potenciales clientes.
                     </p>
                 </div>
             </div>
