--- a/vistas/quienesSomos.html
+++ b/vistas/quienesSomos.html
@@ -30,6 +30,7 @@
             background-image: url("./../resources/img/quienes/desk-computer.jpg");
             /* Set a specific height and width */
             height: 500px;
+           
             /* Create the parallax scrolling effect */
             background-attachment: fixed;
             background-position: 50% 50%;
@@ -78,10 +79,10 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
                 <li class="nav-item ">
-                    <a class="nav-link" href="./../index.html">Inicio</a>
+                    <a class="nav-link" href="./../index1.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./diseñoWyM.html">Diseño Web y Móvil</a>
+                    <a class="nav-link" href="./diseñoWyM.html">Desarrollo Web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./comunityManager.html">Comunity Manager</a>
@@ -170,8 +171,8 @@
                 <div class="col-md-3 mb-md-0 mb-3">
                     <h6 class="text-uppercase">Servicios</h6>
                     <ul class="list-unstyled">
-                        <li> <a href="./../index.html">Inicio</a> </li>
-                        <li> <a href="./diseñoWyM.html">Diseño Web y Móvil</a> </li>
+                        <li> <a href="./../index1.html">Inicio</a> </li>
+                        <li> <a href="./diseñoWyM.html">Desarrollo Web</a> </li>
                         <li> <a href="./comunityManager.html">Comunity Manager</a> </li>
                         <li> <a href="./asesoriaEstrategica.html">Asesoria Estrategica</a> </li>
                     </ul>
