--- a/index1.html
+++ b/index1.html
@@ -125,10 +125,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
                 <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Presentacion</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="index1.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="vistas/diseñoWyM.html">Diseño Web y Móvil</a>
+                    <a class="nav-link" href="vistas/diseñoWyM.html">Desarrollo Web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="vistas/comunityManager.html">Comunity Manager</a>
@@ -300,7 +303,7 @@
                 <h3>Redes sociales? <i class="fa fa-arrow-down" aria-hidden="true"></i></h3>
             </div>
             <div class="col-md-4 col-sm-12 text-center">
-                <h3>Diseño web y movil? <i class="fa fa-arrow-down" aria-hidden="true"></i></h3>
+                <h3>Diseño Web? <i class="fa fa-arrow-down" aria-hidden="true"></i></h3>
             </div>
         </div>
         <div class="row">
@@ -334,8 +337,8 @@
                 <div class="col-md-3 mb-md-0 mb-3">
                     <h6 class="text-uppercase">Servicios</h6>
                     <ul class="list-unstyled">
-                        <li> <a href="index.html">Inicio</a> </li>
-                        <li> <a href="vistas/diseñoWyM.html">Diseño Web y Móvil</a> </li>
+                        <li> <a href="index1.html">Inicio</a> </li>
+                        <li> <a href="vistas/diseñoWyM.html">Desarrollo Web</a> </li>
                         <li> <a href="vistas/comunityManager.html">Comunity Manager</a> </li>
                         <li> <a href="vistas/asesoriaEstrategica.html">Asesoria Estrategica</a> </li>
                     </ul>
