--- a/vistas/diseñoWyM.html
+++ b/vistas/diseñoWyM.html
@@ -30,10 +30,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="./../index.html">Inicio</a>
+          <a class="nav-link" href="./../index1.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./diseñoWyM.html">Diseño Web y Móvil</a>
+          <a class="nav-link" href="./diseñoWyM.html">Desarrollo Web</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./comunityManager.html">Comunity Manager</a>
@@ -103,129 +103,142 @@
     </div>
     <br /><br />
     <div>
-      <table style="color: aqua;">
-        <tbody>
-          <tr>
-            <td class="centerText">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-terminal-fill" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg" style="color: aqua;">
-                <path fill-rule="evenodd"
-                  d="M0 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3zm9.5 5.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm-6.354-.354L4.793 6.5 3.146 4.854a.5.5 0 1 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708z" />
-              </svg>
-            </td>
-            <td class="centerText">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sunglasses" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M8 7a1 1 0 0 0-1 1H6a2 2 0 1 1 4 0H9a1 1 0 0 0-1-1zM0 8a.5.5 0 0 1 .5-.5h1v1h-1A.5.5 0 0 1 0 8zm15.5.5h-1v-1h1a.5.5 0 0 1 0 1z" />
-                <path fill-rule="evenodd"
-                  d="M3 5a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h1a3 3 0 0 0 3-3V7a2 2 0 0 0-2-2H3zm0 1a1 1 0 0 0-1 1v.941c0 .264.356.348.474.112l.228-.457a2 2 0 0 1 .894-.894l.457-.228C4.289 6.356 4.205 6 3.94 6H3z" />
-                <path fill-rule="evenodd"
-                  d="M2.023 6.784C2.008 6.854 2 6.926 2 7v.941c0 .264.356.348.474.112l.228-.457a2 2 0 0 1 .894-.894l.457-.228C4.289 6.356 4.205 6 3.94 6H3a1.001 1.001 0 0 0-.977.784zm3.146-.77A1.219 1.219 0 0 1 4.5 7.368l-.457.228a1 1 0 0 0-.447.447l-.228.457a1.22 1.22 0 0 1-1.354.669A1 1 0 0 0 3 10h1a2 2 0 0 0 2-2V7a1 1 0 0 0-.831-.986zM1 7a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v1a3 3 0 0 1-3 3H3a2 2 0 0 1-2-2V7z" />
-                <path d="M9 7a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2h-1a3 3 0 0 1-3-3V7z" />
-                <path fill-rule="evenodd"
-                  d="M13 6h-2a1 1 0 0 0-1 1v1a2 2 0 0 0 2 2h1a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-2-1a2 2 0 0 0-2 2v1a3 3 0 0 0 3 3h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2z" />
-              </svg>
-            </td>
-            <td class="centerText">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-dots-fill" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg" style="align-content: center;">
-                <path fill-rule="evenodd"
-                  d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-              </svg>
-            </td>
-          </tr>
-          <tr>
-            <td class="centerText">
-              <p style="font-size: 20px;">
-                Garantizamos el uso de lo ultimo en diseño para desarrollo .
-              </p>
-            </td>
-            <td class="centerText">
-              <p style="font-size: 20px;">
-                Disfrutara de un estilo unico en su pagina que atraera rapido
-                la atencion de todos sus clientes.
-              </p>
-            </td>
-            <td class="centerText">
-              <p style="font-size: 20px;">
-                Servicio de atencion ante cualquier incoveniente
-              </p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="contaner">
+        <div class="row ">
+          <div class="col-md-12 ">
+            <table style="color: aqua;">
+              <tbody>
+                <tr>
+                  <td class="centerText">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-terminal-fill" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg" style="color: aqua;">
+                      <path fill-rule="evenodd"
+                        d="M0 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3zm9.5 5.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm-6.354-.354L4.793 6.5 3.146 4.854a.5.5 0 1 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708z" />
+                    </svg>
+                  </td>
+                  <td class="centerText">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sunglasses" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd"
+                        d="M8 7a1 1 0 0 0-1 1H6a2 2 0 1 1 4 0H9a1 1 0 0 0-1-1zM0 8a.5.5 0 0 1 .5-.5h1v1h-1A.5.5 0 0 1 0 8zm15.5.5h-1v-1h1a.5.5 0 0 1 0 1z" />
+                      <path fill-rule="evenodd"
+                        d="M3 5a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h1a3 3 0 0 0 3-3V7a2 2 0 0 0-2-2H3zm0 1a1 1 0 0 0-1 1v.941c0 .264.356.348.474.112l.228-.457a2 2 0 0 1 .894-.894l.457-.228C4.289 6.356 4.205 6 3.94 6H3z" />
+                      <path fill-rule="evenodd"
+                        d="M2.023 6.784C2.008 6.854 2 6.926 2 7v.941c0 .264.356.348.474.112l.228-.457a2 2 0 0 1 .894-.894l.457-.228C4.289 6.356 4.205 6 3.94 6H3a1.001 1.001 0 0 0-.977.784zm3.146-.77A1.219 1.219 0 0 1 4.5 7.368l-.457.228a1 1 0 0 0-.447.447l-.228.457a1.22 1.22 0 0 1-1.354.669A1 1 0 0 0 3 10h1a2 2 0 0 0 2-2V7a1 1 0 0 0-.831-.986zM1 7a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v1a3 3 0 0 1-3 3H3a2 2 0 0 1-2-2V7z" />
+                      <path d="M9 7a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2h-1a3 3 0 0 1-3-3V7z" />
+                      <path fill-rule="evenodd"
+                        d="M13 6h-2a1 1 0 0 0-1 1v1a2 2 0 0 0 2 2h1a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-2-1a2 2 0 0 0-2 2v1a3 3 0 0 0 3 3h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2z" />
+                    </svg>
+                  </td>
+                  <td class="centerText">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-dots-fill" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg" style="align-content: center;">
+                      <path fill-rule="evenodd"
+                        d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+                    </svg>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="centerText">
+                    <p style="font-size: 20px;">
+                      Garantizamos el uso de lo ultimo en diseño para desarrollo .
+                    </p>
+                  </td>
+                  <td class="centerText">
+                    <p style="font-size: 20px;">
+                      Disfrutara de un estilo unico en su<br> pagina que
+                      atraera rapido la atencion de todos sus clientes.
+                    </p>
+                  </td>
+                  <td class="centerText">
+                    <p style="font-size: 20px;">
+                      Servicio de atencion ante cualquier incoveniente
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 
-  <div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col" class="centerText">
-            <h1>
-              Basico
-            </h1>
-            <p><b>desde $1000</b> <span style="color: gray;font-size: 10;"></span></p>
-          </th>
-          <th scope="col" class="centerText">
-            <h1>
-              Profesional
-            </h1>
-            <p><b>desde $1000</b> <span style="color: gray;font-size: 10;">/</span></p>
+  <div class="contaner">
+    <div class="row ">
+      <div class="col-md-12 ">
+        <table class="table  ">
+          <thead>
+            <tr>
+              <th scope="col" class="centerText">
+                <h1>
+                  Basico
+                </h1>
+                <p><b>desde $1000</b> <span style="color: gray;font-size: 10;"></span></p>
+              </th>
+              <th scope="col" class="centerText">
+                <h1>
+                  Profesional
+                </h1>
+                <p><b>desde $3000</b> <span style="color: gray;font-size: 10;">/</span></p>
 
 
-          </th>
-          <th scope="col" class="centerText">
-            <h1>
-              Avanzado
-            </h1>
-            <p><b>desde $1000</b> <span style="color: gray;font-size: 10;"></span></p>
+              </th>
+              <th scope="col" class="centerText">
+                <h1>
+                  Avanzado
+                </h1>
+                <p><b>desde $5000</b> <span style="color: gray;font-size: 10;"></span></p>
 
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="centerText" style="color:black">
-            Diseño responsive<br><br>
-            Contenido de hasta 3 secciones<br><br>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row" class="centerText" style="color:black">
+                Diseño responsive<br><br>
+                Contenido de hasta 3 secciones<br><br>
 
-            Contenido fijo – No editable<br><br>
+                Contenido fijo – No editable<br><br>
 
-            Integración con Redes Sociales<br><br>
+                Integración con Redes Sociales<br><br>
 
-            Diseño profesional básico<br><br>
-            <button type="button" class="btn btn-primary">Consulta</button>
-          </td>
-          <td class="centerText" style="color:black">
-            Diseño esponsive <br><br>
-            Contenido de hasta 5 secciones <br><br>
+                Diseño profesional básico<br><br>
+                <a href="./contacto.html" class="btn btn-info btn-md"> Consulta</a>
+              </td>
+              <td scope="row" class="centerText" style="color:black">
+                Diseño esponsive <br><br>
+                Contenido de hasta 5 secciones <br><br>
 
-            Sección autogestionable <br><br>
+                Sección autogestionable <br><br>
 
-            Integración con Redes Sociales <br><br>
+                Integración con Redes Sociales <br><br>
 
-            Diseño profesional avanzado <br><br>
-            <button type="button" class="btn btn-primary">Consulta</button>
-          </td>
-          <td class="centerText" style="color:black">
-            Diseño Responsive <br> <br>
+                Diseño profesional avanzado <br><br>
+                <a href="./contacto.html" class="btn btn-info btn-md"> Consulta</a>
+              </td>
+              <td scope="row" class="centerText" style="color:black">
+                Diseño Responsive <br> <br>
 
-            Contenido de hasta 7 secciones <br> <br>
+                Contenido de hasta 7 secciones <br> <br>
 
-            Contenido autogestionable<br> <br>
+                Contenido autogestionable<br> <br>
 
-            Integración con Redes Sociales<br> <br>
+                Integración con Redes Sociales<br> <br>
 
-            Diseño profesional personalizado según preferencias<br> <br>
+                Diseño profesional personalizado<br> <br>
 
-            Catálogo de Productos – Dividido en categorías<br> <br>
-            <button type="button" class="btn btn-primary">Consulta</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+                Catálogo de Productos <br>
+                dividido por categorias <br> <br>
+                <a href="./contacto.html" class="btn btn-info btn-md"> Consulta</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
   </div>
 
   <!-- Footer -->
@@ -243,8 +256,8 @@
         <div class="col-md-3 mb-md-0 mb-3">
           <h6 class="text-uppercase">Servicios</h6>
           <ul class="list-unstyled">
-            <li><a href="./../index.html">Inicio</a></li>
-            <li><a href="./diseñoWyM.html">Diseño Web y Móvil</a></li>
+            <li><a href="./../index1.html">Inicio</a></li>
+            <li><a href="./diseñoWyM.html">Desarrollo Web</a></li>
             <li><a href="./comunityManager.html">Comunity Manager</a></li>
             <li>
               <a href="./asesoriaEstrategica.html">Asesoria Estrategica</a>
