--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
 
     <!-- Titulo  -->
-    <title>Inicio</title>
+    <title>Presentacion</title>
 
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="resources/css/styles.css" />
