--- a/vistas/asesoriaEstrategica.html
+++ b/vistas/asesoriaEstrategica.html
@@ -200,7 +200,7 @@
                     ...asesrorarte y crear la estarategia mas
                     adecuada para tu negocio, combinando las tecnicas que hoy son tendencia mundial
                     y que te llevaran a un crecimiento exponencial. <br>
-                    <a href="contacto.html" class="mt-2 btn btn-outline-light"> Contactanos..</a>
+                    <a href="contacto.html" class="mt-2 btn btn-lg btn-outline-light"> Contactanos..</a>
 
                 </p>
 
