--- a/vistas/diseñoWyM.html
+++ b/vistas/diseñoWyM.html
@@ -13,7 +13,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
   <!-- Titulo  -->
-  <title>Inicio</title>
+  <title>Diseño WEb</title>
 
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="./../resources/css/styles.css" />
@@ -64,7 +64,7 @@
 
   <div class="parallax"></div>
 
-  <div style="height: 600px; background-color: rgb(0, 0, 0); font-size: 36px;">
+  <div style="height: 650px; background-color: rgb(0, 0, 0); font-size: 36px;">
     <br /><br />
     <div style="text-align: center; width: auto;">
       <table>
@@ -90,12 +90,13 @@
                     text-align: center;
                     font-size: 28px;
                   ">
-                Nos enfocamos como agencia especializada en Marketing Digital,
-                de llevar a cabo un diseño de sitio web que cumpla con todos
+                Como agencia especializada en Marketing Digital, nos enfocamos
+                en llevar a cabo un diseño de sitio web que cumpla con todos
                 los requerimientos que tu empresa necesita, de ésta manera
                 otorgarle mayor reconocimiento y por consiguiente maximizar su
                 imagen y ventas.
               </p>
+              <a href="contacto.html" class="mt-2 btn btn-lg btn-outline-light"> Contactanos..</a>
             </td>
           </tr>
         </tbody>
