--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <!-- Barra Navegadora -->
     <nav class="navbar navbar-expand-md navbar-light bg-dark">
 
+
+
         <button class="navbar-toggler hidden-lg-up bg-light" type="button" data-toggle="collapse"
             data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
@@ -107,10 +109,18 @@
                         El proyecto correspponde a un sitio web para una empresa de marketing digital, que pretende
                         presentarse y mostrar sus servicios de un modo ameno y atractivo a sus potenciales clientes.
                     </p>
+
+                    <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
+                        <li class=" text-center">
+                            <audio src="./resources/audio/relaxing jazz music for study1.mp3" loop controls="controls"
+                        type="audio/mpeg" preload="preload"> </audio><br>
+                            <p> <i class="fa fa-arrow-up" aria-hidden="true"></i> Buena musica aqui</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <audio src="./resources/audio/relaxing jazz music for study1.mp3" autoplay loop></audio>
+
     </div>
 
 
