--- a/index1.html
+++ b/index1.html
@@ -131,7 +131,7 @@
                     <a class="nav-link" href="index1.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="vistas/diseñoWyM.html">Desarrollo Web</a>
+                    <a class="nav-link" href="vistas/desarrolloWeb.html">Desarrollo Web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="vistas/comunityManager.html">Comunity Manager</a>
@@ -316,7 +316,7 @@
                         alt="Galeria imagen"></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <a href="./vistas/diseñoWyM.html"><img src="./resources/img/inicio/wym.jpg" alt="Galeria imagen"></a>
+                <a href="./vistas/desarrolloWeb.html"><img src="./resources/img/inicio/wym.jpg" alt="Galeria imagen"></a>
             </div>
 
         </div>
@@ -338,7 +338,7 @@
                     <h6 class="text-uppercase">Servicios</h6>
                     <ul class="list-unstyled">
                         <li> <a href="index1.html">Inicio</a> </li>
-                        <li> <a href="vistas/diseñoWyM.html">Desarrollo Web</a> </li>
+                        <li> <a href="vistas/desarrolloWeb.html">Desarrollo Web</a> </li>
                         <li> <a href="vistas/comunityManager.html">Comunity Manager</a> </li>
                         <li> <a href="vistas/asesoriaEstrategica.html">Asesoria Estrategica</a> </li>
                     </ul>
