--- a/vistas/asesoriaEstrategica.html
+++ b/vistas/asesoriaEstrategica.html
@@ -128,7 +128,7 @@
                     <a class="nav-link" href="./../index1.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./diseñoWyM.html">Diseño Web y Móvil</a>
+                    <a class="nav-link" href="./desarrolloWeb.html">Diseño Web y Móvil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./comunityManager.html">Comunity Manager</a>
@@ -235,7 +235,7 @@
 
             </div>
             <div class="card">
-                <img src="./../resources/img/asesoria/diseño-y-desarrollo-de-sitios-web.jpg" class="card-img-top"
+                <img src="./../resources/img/asesoria/diseno-y-desarrollo-de-sitios-web.jpg" class="card-img-top"
                     alt="..." height="220vw">
                 <div class="card-body">
                     <h5 class="card-title">Experiencia de Usuario (Diseño UX)</h5>
@@ -340,7 +340,7 @@
                     <h6 class="text-uppercase">Servicios</h6>
                     <ul class="list-unstyled">
                         <li> <a href="./../index1.html">Inicio</a> </li>
-                        <li> <a href="./diseñoWyM.html">Diseño Web y Móvil</a> </li>
+                        <li> <a href="./desarrolloWeb.html">Diseño Web y Móvil</a> </li>
                         <li> <a href="./comunityManager.html">Comunity Manager</a> </li>
                         <li> <a href="./asesoriaEstrategica.html">Asesoria Estrategica</a> </li>
                     </ul>
