--- a/vistas/comunityManager.html
+++ b/vistas/comunityManager.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="./../index1.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./diseñoWyM.html">Desarrollo Web</a>
+                    <a class="nav-link" href="./desarrolloWeb.html">Desarrollo Web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./comunityManager.html">Comunity Manager</a>
@@ -160,7 +160,7 @@
                     <h6 class="text-uppercase">Servicios</h6>
                     <ul class="list-unstyled">
                         <li> <a href="./../index1.html">Inicio</a> </li>
-                        <li> <a href="./diseñoWyM.html">Desarrollo Web</a> </li>
+                        <li> <a href="./desarrolloWeb.html">Desarrollo Web</a> </li>
                         <li> <a href="./comunityManager.html">Comunity Manager</a> </li>
                         <li> <a href="./asesoriaEstrategica.html">Asesoria Estrategica</a> </li>
                     </ul>
