--- a/index1.html
+++ b/index1.html
@@ -163,10 +163,11 @@
     <header class="cabecera">
         <div class="parallax">
             <div class="row h-100">
-                <div class="col-md-12 ">
-                    <h1 class=" h1 text-center"> PyP Media-Marketing digital</h1>
-                    <h4 class="text-center p1" style=" color: aliceblue;">Nuestra estrategia...tu crecimiento</h4>
+                <div class="col-12 col-md-12 ">
+                    <h1 class=" h1 text-center"> PyP Media-Marketing digital</h1>    
+                    <h4 class="text-center p1" style=" color: aliceblue;">Nuestra estrategia...tu crecimiento</h4>                
                 </div>
+                
             </div>
         </div>
         <div class="seccion-media bg-dark">
