--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -26,7 +26,7 @@
             filter: grayscale(0%);
             /* Set a specific height and width */
             height: 500px;
-            width: 1350px;
+            
             /* Create the parallax scrolling effect */
             background-attachment: fixed;
             background-position: 50% 50%;
@@ -124,7 +124,7 @@
     <header class="cabecera text-white">
         <div class="parallax">
             <div class="row h-100 align-items-center ">
-                <div class="col-md-4 ml-4 texto-c">
+                <div class="col-6 col-md-4 ml-4 texto-c">
                     <h1 class="">Contactate...</h1>
                     <p class=" text-left" style="font-size: 18px;">
                         Ponemos a tu dispocision muchas maneras de comunicarte con nosotros,
