--- a/vistas/asesoriaEstrategica.html
+++ b/vistas/asesoriaEstrategica.html
@@ -218,7 +218,8 @@
     </section>
 
     <section class="container mt-4">
-        <div class="card-deck">
+        <div class="col-md-12">
+               <div class="card-deck">
             <div class="card">
                 <img src="./../resources/img/asesoria/analitica_web.jpg" class="card-img-top" alt="..." height="220vw">
                 <div class="card-body">
@@ -317,6 +318,8 @@
                 </div>
             </div>
         </div>
+        </div>
+     
 
 
     </section>
