--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="bg-dark">
     <!-- Barra Navegadora -->
-    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light bg-dark pt-3 pb-3">
 
 
 
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
 
-                <li class="nav-item p-2">
+                <li class="nav-item ">
                     <a class="nav-link" href="index1.html">Vamos al sitio web de marketing <i class="fa fa-arrow-right"
                             aria-hidden="true"></i></a>
                 </li>
